ajout alignfull, wide... correction

--- a/styles/scss/layout.scss
+++ b/styles/scss/layout.scss
@@ -2,15 +2,19 @@
 
 /* Définit la taille maximale du contenu du site */
 .container-body {
-  max-width: min(95vw, $aligncontent);
+  max-width: min(95vw, $aligncontent); /** 1280px */
   margin: 0 auto;
 }
 
 /* Définit la largeur maximale des blocs alignwide et alignfull */
-.alignwide {
+/** Deuxième règle: s'applique dans le Front + dans le BO */
+/** troisième règle: s'applique dans le Front + dans le BO car les fichier main-editor sont wrapper par la class .editor-styles-wrapper donc .editor-styles-wrapper body n'existe pas dans le BO */
+.alignwide,
+.alignwide.is-layout-constrained > :where(:not(.alignleft):not(.alignright):not(.alignfull)),
+body .alignwide.is-layout-constrained > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
   margin-left: auto;
   margin-right: auto;
-  max-width: min(95vw,1280px);
+  max-width: min(95vw, 1280px);
 
   @media (min-width: 1439px) {
     max-width: $alignwide;
@@ -24,7 +28,11 @@
 }
 
 /* Si vous souhaitez que les blocs alignfull occupent 100% de la largeur de l'écran, utilisez ce code à la place */
-.alignfull {
+/** Deuxième règle: s'applique dans le Front + dans le BO */
+/** troisième règle: s'applique dans le Front + dans le BO car les fichier main-editor sont wrapper par la class .editor-styles-wrapper donc .editor-styles-wrapper body n'existe pas dans le BO */
+.alignfull,
+.alignfull.is-layout-constrained > :where(:not(.alignleft):not(.alignright):not(.alignfull)),
+body .alignfull.is-layout-constrained > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   max-width: $alignfull;
